# SimpleCalculator

./: .gitignore  CMakeLists.txt  main.c
